testclass add jsp gets params