@@ -16,10 +16,7 @@ import easymapping.setting.Setting;
 
 public class Dispatcher extends HttpServlet {
 
-	private static final Logger logger = LoggerFactory
-			.getLogger(Dispatcher.class);
-
-	private static final String METHOD_NAME = "Method Name = ";
+	private static final Logger logger = LoggerFactory.getLogger(Dispatcher.class);
 
 	/**
 	 * 
@@ -27,20 +24,23 @@ public class Dispatcher extends HttpServlet {
 	private static final long serialVersionUID = 1L;
 
 	@Override
-	protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-			throws ServletException, IOException {
+	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 		ParamHolder holder = Mapper.get(Mapper.GET, req.getRequestURI());
 		dispatch(holder, new Http(req, resp));
 	}
 
 	@Override
-	protected void doPost(HttpServletRequest req, HttpServletResponse resp)
-			throws ServletException, IOException {
+	protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 		ParamHolder holder = Mapper.get(Mapper.POST, req.getRequestURI());
 		dispatch(holder, new Http(req, resp));
 	}
 
 	private void dispatch(ParamHolder holder, Http http) throws UnsupportedEncodingException {
+		if (holder == null) {
+			http.sendNotFound();
+			return;
+		}
+
 		String encording = Setting.get(Setting.ENCORDING);
 		if (Setting.get(Setting.ENCORDING) != null)
 			http.setCharacterEncoding(encording);
@@ -48,13 +48,14 @@ public class Dispatcher extends HttpServlet {
 			http.setParams(holder.getParams());
 		}
 		Method method = holder.getMethod();
-		logger.debug(METHOD_NAME + method.getName());
 		Object instance;
 		Response render;
 		try {
-			instance = method.getDeclaringClass().getConstructor()
-					.newInstance();
-			render = (Response) method.invoke(instance, http);
+			instance = method.getDeclaringClass().getConstructor().newInstance();
+			if (method.getParameterCount() == 0)
+				render = (Response) method.invoke(instance);
+			else
+				render = (Response) method.invoke(instance, http);
 			render.render(http);
 		} catch (Exception e) {
 			logger.debug(e.getMessage());
